--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,6 +10,7 @@ jobs:
     name: Pull devcontainer
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - run: docker buildx build .devcontainer
   #     - run: docker ps -a
   #     - run: docker images nomiro/devcontainers:universal
