--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,9 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: docker buildx create --use --name devcontainer .devcontainer
-      - run: docker ps -a
-      #     - run: docker ps -a
+      - run: docker build -t devcontainer .devcontainer
       - run: docker exec devcontainer echo foo
   #     - run: docker ps -a
   #     - run: docker exec devcontainer ls -l /tmp
