--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,9 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: docker build -t devcontainer .devcontainer
-      - run: docker run -it devcontainer /bin/sh
+      - run: docker run -it --detatch devcontainer /bin/sh
       - run: docker ps -a
-      - run: docker exec devcontainer echo foo
+      - run: docker exec -t devcontainer echo foo
   #     - run: docker ps -a
   #     - run: docker exec devcontainer ls -l /tmp
   #     - run: docker ps -a
