--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: docker build -t devcontainer .devcontainer
-      - run: docker run -it --detach devcontainer /tmp/test.sh
+      - run: docker run -it devcontainer /tmp/test.sh
       - run: docker ps -a
       - run: docker exec -t devcontainer echo foo
   #     - run: docker ps -a
