--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ requires =
   tox-pyenv
   tox-external-wheels
 isolated_build = true
-envlist = py36, py37, py38, py39, py310
+envlist = py38, py39, py310
 tox_pyenv_fallback = false
 
 # We purposefully separate our testing from the Poetry machinery so that we are
